# rCore

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  log.txt  riscv32-blog_os.json  rust-toolchain  shortcut.sh  status.md  test.cpp  travis-qemu.sh
bootloader/: Cargo.toml  Makefile  build.rs
bootloader/bootinfo/: Cargo.toml
bootloader/bootinfo/src/: lib.rs
bootloader/src/: lang_items.rs  main.rs
bootloader/src/arch/aarch64/: boot.S  boot.ld  mod.rs
bootloader/src/arch/mipsel/: boot.S  boot.ld  mod.rs
bootloader/targets/: aarch64.json  mipsel.json
crate/thread/example/: Cargo.toml  README.md
crate/thread/example/src/: main.rs
docs/: FinalReport.md  (+6 more)
kernel/: Cargo.toml  Makefile  Makefile.new  Xargo.toml  aarch64-blog_os.json  build-rv64  build.rs  events  k210.sh  riscv32-blog_os.json  run-qemu-script  run-qemu-script-custom-llc  run.sh  rv64.json  spec.md  x86_64-blog_os.json
kernel/src/: backtrace.rs  console.rs  consts.rs  fpe.S  fs.rs  lang.rs  lib.rs  logging.rs  main.rs  memory.rs  shell.rs  smp.rs  syscall.rs  thread.rs  trap.rs  util.rs
kernel/src/arch/aarch64/: consts.rs  context.rs  cpu.rs  emmc.rs  fp.rs  interrupt.rs  io.rs  linker.ld  memory.rs  mod.rs  paging.rs  signal.rs  syscall.rs  timer.rs
kernel/src/arch/aarch64/board/raspi3/: emmc.rs  fb.rs  irq.rs  mailbox.rs  mod.rs  serial.rs  timer.rs
kernel/src/arch/aarch64/boot/: boot.S  entry.S  linker.ld  mod.rs
kernel/src/arch/aarch64/driver/: console.rs  mod.rs
kernel/src/arch/aarch64/driver/console/: color.rs  escape_parser.rs  mod.rs
kernel/src/arch/aarch64/driver/fonts/: font8x16.rs
kernel/src/arch/aarch64/driver/usb/: rpi-usb.c  rpi-usb.h
kernel/src/arch/aarch64/interrupt/: consts.rs  context.rs  handler.rs  mod.rs  syndrome.rs  trap.S  vector.S
kernel/src/arch/mipsel/: atomic.patch  compiler_rt.rs  consts.rs  context.rs  cpu.rs  interrupt.rs  io.rs  memory.rs  mod.rs  paging.rs  rand.rs  sbi.rs  signal.rs  syscall.rs  timer.rs
kernel/src/arch/mipsel/board/malta/: consts.rs  device.dts  fb.rs  mod.rs  serial.rs
kernel/src/arch/mipsel/board/mipssim/: consts.rs  device.dts  mod.rs
kernel/src/arch/mipsel/board/thinpad/: consts.rs  device.dts  mod.rs  serial.rs
kernel/src/arch/mipsel/board/u540/: linker.ld  mod.rs
kernel/src/arch/mipsel/boot/: context.S  dtb.S  entry.S  linker.ld  linker.ld.S  regdef.h  trap.S  trap.asm
kernel/src/arch/mipsel/boot/dts/: malta.dts
kernel/src/arch/mipsel/driver/: mod.rs
kernel/src/arch/mipsel/interrupt/: consts.rs  mod.rs
kernel/src/arch/riscv/: atomic.patch  consts.rs  context.rs  cpu.rs  interrupt.rs  io.rs  memory.rs  mod.rs  paging.rs  sbi.rs  signal.rs  syscall.rs  timer.rs
kernel/src/arch/riscv/board/k210/: linker.ld
kernel/src/arch/riscv/boot/: entry32.asm  entry64.asm  entry_k210.asm  linker32.ld  linker64.ld  trap.asm
kernel/src/arch/riscv/interrupt/: consts.rs  context.rs  mod.rs
kernel/src/arch/riscv32/: atomic.patch  compiler_rt.c  compiler_rt.rs  consts.rs  context.rs  cpu.rs  interrupt.rs  io.rs  memory.rs  mod.rs  paging.rs  rand.rs  sbi.rs  serial.rs  smp.rs  syscall.rs  timer.rs
kernel/src/arch/riscv32/boot/: boot.asm  boot_k210.asm  entry.asm  entry32.asm  entry64.asm  linker.ld  linker64.ld  trap.asm
kernel/src/arch/riscv64/: compiler_rt.rs  consts.rs  memory.rs  mod.rs  timer.rs
kernel/src/arch/riscv64/boot/: boot.asm  linker.ld
kernel/src/arch/x86_64/: acpi.rs  consts.rs  cpu.rs  fp.rs  gdt.rs  idt.rs  io.rs  ipi.rs  linker.ld  memory.rs  mod.rs  paging.rs  rand.rs  signal.rs  syscall.rs  timer.rs
kernel/src/arch/x86_64/board/: mod.rs
kernel/src/arch/x86_64/boot/: boot.asm  linker.ld  long_mode_init.asm  vector.asm
kernel/src/arch/x86_64/driver/: ide.rs  keyboard.rs  mod.rs  pic.rs  pit.rs  rtc_cmos.rs  serial.rs  vga.rs
kernel/src/arch/x86_64/interrupt/: consts.rs  fast_syscall.rs  handler.rs  mod.rs  trap.asm  trapframe.rs
kernel/src/drivers/: device_tree.rs  irq.rs  mod.rs  provider.rs
kernel/src/drivers/block/: ahci.rs  ide.rs  mod.rs  virtio_blk.rs
kernel/src/drivers/bus/: mod.rs  pci.rs  virtio_mmio.rs
kernel/src/drivers/console/: color.rs  mod.rs
kernel/src/drivers/console/fonts/: font8x16.rs  font8x16_1bpp.raw
kernel/src/drivers/gpu/: fb.rs  mod.rs  qemu_stdvga.rs  test.rs  virtio_gpu.rs
kernel/src/drivers/input/: mod.rs  virtio_input.rs
kernel/src/drivers/irq/: bcm2837.rs  mod.rs  plic.rs
kernel/src/drivers/mmc/: bcm2835_sdhci.rs  mod.rs  test.rs
kernel/src/drivers/net/: e1000.rs  ixgbe.rs  mod.rs  router.rs  virtio_net.rs
kernel/src/drivers/rtc/: mod.rs  rtc_cmos.rs  rtc_goldfish.rs
kernel/src/drivers/serial/: 16550_reg.rs  bcm2837.rs  com.rs  keyboard.rs  mod.rs  simple_uart.rs  ti_16c550c.rs  uart16550.rs  virtio_console.rs
kernel/src/drivers/tty/: com.rs  mod.rs
kernel/src/fs/: device.rs  epoll.rs  fbdev.rs  fcntl.rs  file.rs  file_like.rs  ioctl.rs  mod.rs  pipe.rs  pseudo.rs  random.rs  stdio.rs  tty.rs  vga.rs
kernel/src/fs/devfs/: fbdev.rs  mod.rs  random.rs  serial.rs  shm.rs  stdio.rs  tty.rs
kernel/src/fs/device/: block.rs  disk.rs  membuf.rs  mod.rs  test.rs
kernel/src/ipc/: mod.rs  semary.rs  shared_mem.rs
kernel/src/lkm/: api.rs  kernelvm.rs  manager.rs  mod.rs  structs.rs  symbol_table.asm
kernel/src/lkm/const_reloc/: aarch64.rs  mipsel.rs  mod.rs  riscv.rs  x86_64.rs
kernel/src/net/: mod.rs  structs.rs  test.rs
kernel/src/process/: abi.rs  context.rs  futex.rs  mod.rs  proc.rs  process.rs  processor.rs  structs.rs  thread.rs
kernel/src/rvm/: inode.rs  memory.rs  mod.rs  structs.rs
kernel/src/signal/: action.rs  mod.rs
kernel/src/sync/: condvar.rs  event_bus.rs  mod.rs  mpsc.rs  mutex.rs  semaphore.rs  test.rs
kernel/src/sync/arch/riscv32/: atomic_lock.rs
kernel/src/sync/arch/x86_64/: atomic_lock.rs
kernel/src/syscall/: ctrl.rs  custom.rs  fs.rs  ipc.rs  lkm.rs  mem.rs  misc.rs  mod.rs  net.rs  proc.rs  signal.rs  time.rs  user.rs
kernel/src/util/: color.rs  escape_parser.rs  mod.rs
kernel/targets/: aarch64.json  mipsel.json  riscv32.json  riscv64.json  x86_64.json
(+376 files in other folders)
