[package]
name = "rust-ucore"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]

[lib]
crate-type = ["staticlib"]

[features]
use_apic = []
test = []
qemu_auto_exit = []
link_user_program = []

[profile.dev]
# enable RVO to avoid stack overflow
opt-level = 1

[profile.release]
debug = true

[dependencies]
bit_field = "0.7.0"
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.5"
bitflags = "1.0"
x86_64 = "0.2.3"
once = "0.3.3"
linked_list_allocator = "0.5.0"
redox_syscall = "0.1"
xmas-elf = "0.6"
arrayvec = { version = "0.4.7", default-features = false }
log = "0.4"
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
simple-filesystem = { git = "https://github.com/wangrunji0408/SimpleFileSystem-Rust" }
bit-allocator = { path = "crate/bit-allocator" }

[build-dependencies]
cc = "1.0"
