[package]
name = "rcore"
version = "0.2.0"
edition = "2018"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Ben Pig Chu <benpichu@gmail.com>",
    "dzy <daizy15@mails.tsinghua.edu.cn>",
    "equation314 <equation618@gmail.com>",
    "cfgbd <cfgbdv@163.com>",
    "koumingyang <1761674434@qq.com>",
    "lcy1996 <992195697@qq.com>",
    "chenqiuhao <haohao0924@126.com>",
    "maoyuchaxue <wangjt15@mails.tsinghua.edu.cn>",
    "Jiajie Chen <jiegec@qq.com>",
    "chyyuu <yuchen@mail.tsinghua.edu.cn>",
    "Shengqi Chen <harry-chen@outlok.com>",
    "Yuhao Zhou <miskcoo@gmail.com>"
]

[features]
default = []
board_qemu = []
board_u540 = ["link_user"]
board_rcore_vmm_guest = ["link_user"]
# (for aarch64 RaspberryPi3)
nographic = []
consolegraphic = []
board_raspi3 = ["bcm2837"]
# for qemu machine
board_malta = []
# for x86 PC
board_pc = ["link_user"]
# Hard link user program
link_user = []
# Run cmdline instead of user shell, useful for automatic testing
run_cmdline = []
# Add performance profiling
profile = []
# Rcore Virtual machine
hypervisor = ["rvm"]

[profile.dev]
# MUST >= 2 : Enable RVO to avoid stack overflow
opt-level = 2

[dependencies]
bitflags = "1.2"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
bitvec = { version = "0.17", default-features = false, features = ["alloc"] }
bit_field = "0.10"
buddy_system_allocator = "0.4.0"
compression = { version = "0.1.4", default-features = false, features = ["gzip"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "eee2c23" }
executor = { git = "https://github.com/rcore-os/executor.git", rev = "a2d02ee9" }
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers", rev = "fcf694d2", features = ["log"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
naive-timer = { git = "https://github.com/rcore-os/naive-timer.git", rev = "d0cfe04" }
num = { version = "0.2.1", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
num-derive = "0.3"
pci = { git = "https://github.com/rcore-os/pci-rs", rev = "a4e7cea6" }
pc-keyboard = "0.5"
rcore-console = { git = "https://github.com/rcore-os/rcore-console", rev = "b7bacf9", default-features = false }
rcore-memory = { path = "../crate/memory" }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "517af47" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "517af47" }
rcore-fs-ramfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "517af47" }
rcore-fs-mountfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "517af47" }
rcore-fs-devfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "517af47" }
rlibc = "1.0"
smoltcp = { git = "https://github.com/rcore-os/smoltcp", rev = "5bd87c7c", default-features = false, features = ["alloc", "log", "ethernet", "proto-ipv4", "proto-igmp", "socket-icmp", "socket-udp", "socket-tcp", "socket-raw"] }
spin = "0.5"
trapframe = { git = "https://github.com/rcore-os/trapframe-rs", rev = "bdfe5aa" }
virtio-drivers = { git = "https://github.com/rcore-riscv-hypervisor-dev/virtio-drivers", rev = "1201a0b" }
volatile = "0.2"
woke = "0.0.2"
xmas-elf = "0.7"
rvm = { git = "https://github.com/rcore-riscv-hypervisor-dev/RVM", rev = "2867e78", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
apic = { git = "https://github.com/rcore-os/apic-rs", rev = "fb86bd7" }
acpi = "0.4"
aml = "0.4"
raw-cpuid = "8.0"
rboot = { path = "../rboot", default-features = false }
uart_16550 = "0.2.7"
x86_64 = "0.11"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-riscv-hypervisor-dev/riscv" , rev = "3f5efb1", features = ["inline-asm", "hypervisor"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { git = "https://github.com/rcore-os/aarch64", version = "3.0.1" }
bcm2837 = { git = "https://github.com/rcore-os/bcm2837", version = "2.5.1", optional = true }

[target.'cfg(target_arch = "mips")'.dependencies]
mips = { git = "https://github.com/Harry-Chen/rust-mips", rev = "3b828a2" }
paste = "0.1"
